# splines

./: .gitmodules  CMakeLists.txt  README.md  splines.cbp  splines.layout
builders/: Debug.sh  Release.sh
include/: Spline.h
src/: Spline.cpp  main.cpp
